# seam

./: .gitignore  .golangci.yml  .oxfmtrc.json  .oxlintrc.json  .swift-format  .swiftlint.yml  CLAUDE.md  Cargo.toml  ECOSYSTEM.md  Justfile  README.md  chore.toml  eslint.config.mjs  knip.json  package.json  tsconfig.base.json  tsconfig.json  tsdown.p1.ts  tsdown.p2.ts  tsdown.p3.ts
.github/workflows/: ci.yml
docs/: development.md  roadmap.md
docs/architecture/: logic-layer.md  ui-layer.md
docs/protocol/: procedure-manifest.md  subscription-protocol.md
examples/docs-collab/: package.json  seam.config.ts  tsconfig.json
examples/features/channel-subscription/: package.json  seam.config.ts  tsconfig.json
examples/features/context-auth/: package.json  seam.toml
examples/features/handoff-narrowing/: .gitignore  package.json  seam.toml  tsconfig.json
examples/features/query-mutation/: package.json  seam.toml
examples/fs-router-demo/: .gitignore  package.json  seam.config.ts
examples/github-dashboard/: seam.config.ts  tsconfig.json
examples/github-dashboard/backends/rust-axum/: Cargo.toml  seam.config.ts
examples/github-dashboard/backends/rust-axum/src/: main.rs
examples/github-dashboard/frontend/: package.json  vite.config.ts
examples/github-dashboard/seam-app/: package.json  seam.config.ts  tsconfig.json  vite.config.ts
examples/github-dashboard/shared/: tsconfig.json
examples/i18n-demo/backend/: Cargo.toml
examples/i18n-demo/backend/src/: main.rs
examples/i18n-demo/seam-app/: package.json  seam.config.ts  tsconfig.json  vite.config.ts
examples/markdown-demo/server-go/: go.mod  go.sum  main.go
examples/markdown-demo/server-rust/: Cargo.toml  seam.config.ts  tsconfig.json
examples/markdown-demo/server-rust/src/: main.rs
examples/markdown-demo/server-rust/src/pages/: mod.rs
examples/markdown-demo/server-rust/src/procedures/: get_article.rs  mod.rs
examples/markdown-demo/server-ts/: package.json  seam.config.ts
examples/markdown-demo/templates/: article.html
examples/standalone/client-react/: package.json  seam.config.ts  tsconfig.json  vite.config.ts
examples/standalone/server-bun/: package.json  seam.config.ts  tsconfig.json
examples/standalone/server-go/: go.mod
examples/standalone/server-go-chi/: README.md  go.mod  go.sum  main.go
examples/standalone/server-go-gin/: go.mod  main.go
examples/standalone/server-node/: package.json  seam.config.ts
examples/standalone/server-rust/: seam.config.ts  tsconfig.json
scripts/: build-fixtures.sh  bump-version.sh  lint-length.sh  publish.sh  smoke-fullstack.sh  test-integration.sh  typecheck-ts.sh  verify-all.sh  yalc-publish.sh
scripts/ci/: build-cli.sh  build-fixtures.sh  build-wasm.sh  check-links.sh  fmt-check.sh  fmt.sh  lint.sh  test-integration.sh  typecheck.sh
src/cli/codegen/: CLAUDE.md
src/cli/core/: CLAUDE.md  Cargo.toml  README.md
src/cli/core/src/: clean.rs  main.rs  pull.rs  shell.rs  ui.rs  workspace.rs
src/cli/core/src/config/: loader.rs  mod.rs  types.rs
src/cli/core/src/config/tests/: parsing.rs  ts_config.rs  workspace.rs
src/cli/core/src/dev/: fullstack.rs  mod.rs  ui.rs
src/cli/core/src/dev/fullstack/: helpers.rs  tests.rs
src/cli/core/src/dev_server/: tests.rs
src/cli/pkg/: README.md  package.json
src/cli/seam/: CLAUDE.md  config.d.ts  config.mjs  package.json
src/cli/skeleton/: CLAUDE.md  Cargo.toml  README.md
src/cli/skeleton/src/: document.rs  lib.rs  slot.rs  slot_paths.rs  slot_warning.rs
src/cli/skeleton/src/ctr_check/: parse.rs
src/cli/skeleton/src/extract/: array.rs  boolean.rs  dom.rs  enum_axis.rs
src/cli/skeleton/src/extract/tests/: complex_structures.rs  legacy.rs
src/cli/vite/: README.md  package.json  tsdown.config.ts
src/client/react/: README.md  package.json
src/client/tanstack-router/: README.md  package.json
src/client/vanilla/: package.json
src/eslint/: CLAUDE.md  README.md  package.json
src/eslint/__tests__/: no-async-in-skeleton.test.ts  no-browser-apis-in-skeleton.test.ts  no-derived-data-in-skeleton.test.ts  no-effect-in-skeleton.test.ts  no-nondeterministic-in-skeleton.test.ts
src/eslint/src/: index.ts
src/i18n/: package.json
src/i18n/__tests__/: cache.test.ts  i18n.test.ts  react.test.ts  storage.test.ts
src/i18n/src/: cache.ts  index.ts
src/query/react/: README.md  package.json  tsdown.config.ts
src/query/seam/: README.md  package.json  tsdown.config.ts
src/router/seam/: README.md  package.json
src/server/adapter/axum/: CLAUDE.md  Cargo.toml
src/server/adapter/axum/src/: error.rs  lib.rs
src/server/adapter/axum/src/handler/: channel.rs  mod.rs  page.rs  projection.rs  rpc.rs  sse_lifecycle.rs  stream.rs  subscribe.rs  upload.rs
src/server/adapter/axum/src/tests/: channel.rs  mod.rs  rpc.rs  stream.rs  upload.rs
src/server/core/rust/: CLAUDE.md  Cargo.toml
src/server/core/rust-macros/: CLAUDE.md  Cargo.toml
src/server/core/rust-macros/src/: seam_command.rs  seam_procedure.rs  seam_stream.rs  seam_subscription.rs  seam_upload.rs
src/server/core/rust-macros/tests/: runtime.rs
src/server/core/rust-macros/tests/fail/: procedure_no_input.stderr
src/server/core/rust/src/: channel.rs  context.rs  errors.rs  lib.rs  manifest.rs  page.rs  procedure.rs  resolve.rs  server.rs  validation.rs
src/server/core/rust/src/build_loader/: loader.rs  mod.rs  tests.rs  types.rs
src/server/engine/rust/: CLAUDE.md  Cargo.toml  README.md
src/server/engine/rust/src/: lib.rs  page.rs  render.rs  slots.rs
src/server/engine/wasm/: Cargo.toml
src/server/injector/wasm/: Cargo.toml
tests/e2e/: README.md  playwright.config.ts  tsconfig.json
tests/fs-router/: fs_router_test.go
tests/fullstack/: CLAUDE.md  fullstack_test.go
tests/i18n/: i18n_test.go
tests/integration/: CLAUDE.md  batch_test.go  channel_test.go  helpers_test.go  main_test.go  manifest_test.go  page_test.go  parity_test.go  rpc_test.go  subscribe_test.go
tests/markdown-demo/: page_test.go
tests/workspace-integration/: helpers_test.go  main_test.go  manifest_test.go  parity_test.go  rpc_test.go
(+320 files in other folders)
