[workspace]
resolver = "2"
members = [
  "src/server/core/rust",
  "src/server/core/rust-macros",
  "src/server/adapter/axum",
  "src/server/injector/rust",
  "src/server/injector/wasm",
  "src/server/engine/rust",
  "src/server/engine/wasm",
  "src/cli/skeleton",
  "src/cli/codegen",
  "src/cli/core",
  "examples/standalone/server-rust",
  "examples/github-dashboard/backends/rust-axum",
  "examples/i18n-demo/backend",
]

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"

[workspace.lints.clippy]
too_many_lines = "warn"

[workspace.package]
version = "0.4.15"
edition = "2024"
license = "MIT"
authors = ["Canmi(Canmi21) <t@canmi.icu>"]
repository = "https://github.com/canmi21/seam"
