[workspace]
resolver = "2"
members = [
  "src/server/core/rust",
  "src/server/core/rust-macros",
  "src/server/adapter/axum",
  "src/server/injector/rust",
  "src/server/injector/wasm",
  "src/server/engine/rust",
  "src/server/engine/wasm",
  "src/cli/skeleton",
  "src/cli/codegen",
  "src/cli/core",
  "examples/standalone/server-rust",
  "examples/github-dashboard/backends/rust-axum",
  "examples/i18n-demo/backend",
]

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"

[workspace.lints.clippy]
too_many_lines = "warn"
# pedantic (individually selected)
cloned_instead_of_copied = "warn"
explicit_iter_loop = "warn"
implicit_clone = "warn"
inefficient_to_string = "warn"
manual_let_else = "warn"
needless_pass_by_value = "warn"
redundant_closure_for_method_calls = "warn"
uninlined_format_args = "warn"
unnecessary_wraps = "warn"
unused_self = "warn"
# restriction / nursery
dbg_macro = "deny"
print_stdout = "warn"
print_stderr = "warn"
todo = "warn"
unwrap_used = "warn"

[workspace.package]
version = "0.5.9"
edition = "2024"
license = "MIT"
authors = ["Canmi(Canmi21) <t@canmi.icu>"]
repository = "https://github.com/canmi21/seam"
