[package]
name = "markdown-demo-rust"
version = "0.0.0"
edition.workspace = true
license.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
pulldown-cmark = { version = "0.12", default-features = false, features = ["html"] }
seam-server = { path = "../../../src/server/core/rust" }
seam-server-axum = { path = "../../../src/server/adapter/axum" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
