[package]
name = "seam-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "CLI for the SeamJS compile-time rendering framework"
readme = "README.md"
keywords = ["seam", "ctr", "cli", "codegen", "skeleton"]
categories = ["command-line-utilities", "development-tools::build-utils"]

[lints]
workspace = true

[[bin]]
name = "seam"
path = "src/main.rs"

[dependencies]
anyhow = "1"
axum = "0.8"
clap = { version = "4", features = ["derive"] }
indicatif = "0.17"
notify = "8"
reqwest = { version = "0.13", features = ["json", "stream"] }
seam-codegen = { version = "0.5.10", path = "../codegen" }
seam-server = { version = "0.5.10", path = "../../server/core/rust" }
seam-skeleton = { version = "0.5.10", path = "../skeleton" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
toml = "1.0"
tower-http = { version = "0.6", features = ["fs"] }

[dev-dependencies]
tempfile = "3.26.0"
