[package]
name = "seam-cli"
description = "CLI for the SeamJS compile-time rendering framework"
readme = "README.md"
keywords = ["seam", "ctr", "cli", "codegen", "skeleton"]
categories = ["command-line-utilities", "development-tools::build-utils"]

[package.version]
workspace = true

[package.edition]
workspace = true

[package.license]
workspace = true

[package.authors]
workspace = true

[package.repository]
workspace = true

[lints]
workspace = true

[features]
default = ["crypto-ring"]
crypto-ring = ["rustls/ring"]
crypto-aws = ["reqwest/rustls"]

[[bin]]
name = "seam"
path = "src/main.rs"

[dependencies]
anyhow = "1"
axum = { version = "0.8", features = ["ws"] }
futures-util = "0.3"
indicatif = "0.18"
notify = "8"
serde_json = "1"
tokio-tungstenite = "0.28"
toml = "1"

[dependencies.clap]
version = "4"
features = ["derive"]

[dependencies.reqwest]
version = "0.13"
default-features = false
features = ["json", "stream", "charset", "http2", "system-proxy", "rustls-no-provider"]

[dependencies.rustls]
version = "0.23"
default-features = false
features = ["std", "tls12"]

[dependencies.seam-codegen]
version = "0.5.32"
path = "../codegen"

[dependencies.seam-server]
version = "0.5.32"
path = "../../server/core/rust"

[dependencies.seam-skeleton]
version = "0.5.32"
path = "../skeleton"

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.tokio]
version = "1"
features = ["full"]

[dependencies.tower-http]
version = "0.6"
features = ["fs"]

[dev-dependencies]
tempfile = "3"
