[package]
name = "github-dashboard-axum"
version = "0.0.0"
edition.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
axum = "0.8"
reqwest = { version = "0.13", features = ["json"] }
seam-server = { version = "0.5.28", path = "../../../../src/server/core/rust" }
seam-server-axum = { version = "0.5.28", path = "../../../../src/server/adapter/axum" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["fs"] }
