[package]
name = "seam-server-axum"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Axum adapter for the SeamJS Rust server core"
readme = "README.md"
keywords = ["seam", "ctr", "web", "axum"]
categories = ["web-programming::http-server"]

[lints]
workspace = true

[dependencies]
axum = { version = "0.8", features = ["ws"] }
futures-core = "0.3"
futures-util = "0.3"
seam-engine = { version = "0.5.8", path = "../../engine/rust" }
seam-injector = { version = "0.5.8", path = "../../injector/rust" }
seam-server = { version = "0.5.8", path = "../../core/rust" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
