[package]
name = "seam-server-axum"
description = "Axum adapter for the SeamJS Rust server core"
readme = "README.md"
keywords = ["seam", "ctr", "web", "axum"]
categories = ["web-programming::http-server"]

[package.version]
workspace = true

[package.edition]
workspace = true

[package.license]
workspace = true

[package.authors]
workspace = true

[package.repository]
workspace = true

[lints]
workspace = true

[dependencies]
futures-core = "0.3"
futures-util = "0.3"
serde_json = "1"
tokio-stream = "0.1"
http-body-util = "0.1"
multer = "3"

[dependencies.axum]
version = "0.8"
features = ["ws", "multipart"]

[dependencies.seam-engine]
version = "0.5.32"
path = "../../engine/rust"

[dependencies.seam-injector]
version = "0.5.32"
path = "../../injector/rust"

[dependencies.seam-server]
version = "0.5.32"
path = "../../core/rust"

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.tokio]
version = "1"
features = ["full"]

[dependencies.tower]
version = "0.5"
features = ["util"]

[dependencies.tower-http]
version = "0.6"
features = ["fs"]

[dev-dependencies]
tokio-tungstenite = "0.28"

[dev-dependencies.tower]
version = "0.5"
features = ["util"]
