[package]
name = "seam-macros"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Procedural macros for the SeamJS compile-time rendering framework"
readme = "README.md"
keywords = ["seam", "ctr", "proc-macro", "derive"]
categories = ["development-tools::procedural-macro-helpers"]

[lints]
workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"

[dev-dependencies]
trybuild = "1"
seam-server = { path = "../../core/rust" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt"] }
futures-util = "0.3"
bytes = "1"
