[package]
name = "seam-server"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Framework-agnostic Rust server core for the SeamJS compile-time rendering framework"
readme = "README.md"
keywords = ["seam", "ctr", "web", "template"]
categories = ["web-programming::http-server"]

[lints]
workspace = true

[dependencies]
futures-core = "0.3"
seam-macros = { version = "0.4.16", path = "../rust-macros" }
serde = { version = "1", features = ["derive"] }
seam-engine = { version = "0.4.16", path = "../../engine/rust" }
serde_json = "1"
regex = "1"
