[package]
name = "seam-engine"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Pure-logic server engine for the SeamJS framework: page assembly, data structuring, i18n helpers"

[lints]
workspace = true

[dependencies]
seam-injector = { version = "0.4.16", path = "../../injector/rust" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
