[package]
name = "seam-engine-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "WASM bindings for the SeamJS server engine"

[lib]
crate-type = ["cdylib", "rlib"]

[lints]
workspace = true

[dependencies]
seam-engine = { version = "0.5.2", path = "../rust" }
seam-injector = { version = "0.5.2", path = "../../injector/rust" }
serde_json = "1"
wasm-bindgen = "0.2"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O", "--all-features"]
