[package]
name = "seam-injector-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "WASM bindings for the SeamJS HTML template injector"

[lib]
crate-type = ["cdylib", "rlib"]

[lints]
workspace = true

[dependencies]
seam-injector = { version = "0.4.15", path = "../rust" }
serde_json = "1"
wasm-bindgen = "0.2"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O", "--all-features"]
